{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 83,
  "lineage": "3e68a360-e6e0-60bd-e903-cc613b325a92",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d176f79571d18a8f",
            "arn": "arn:aws:ec2:ap-south-1:232727982553:instance/i-0bce11304a02299bd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bce11304a02299bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0250f2bce006fe3b9"
              }
            ],
            "primary_network_interface_id": "eni-0250f2bce006fe3b9",
            "private_dns": "ip-10-0-1-119.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.119",
            "public_ip": "65.2.142.205",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09759d32ab176cb07",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01370b042dc0b2687",
            "tags": {
              "Name": "Linux_server"
            },
            "tags_all": {
              "Name": "Linux_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07647b47b8ba0ba81"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "232727982553",
            "id": "i-0bce11304a02299bd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.my_SG",
            "aws_subnet.public_sub",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ae0093476c7a1da6",
            "arn": "arn:aws:ec2:ap-south-1:232727982553:instance/i-05ce4006b6b67c768",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ce4006b6b67c768",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a8fc5774d3ca94c2"
              }
            ],
            "primary_network_interface_id": "eni-0a8fc5774d3ca94c2",
            "private_dns": "ip-10-0-0-67.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.67",
            "public_ip": "13.233.39.130",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008ac8d9128f7d32b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f97ebfc8c548f95",
            "tags": {
              "Name": "Windows_server"
            },
            "tags_all": {
              "Name": "Windows_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07647b47b8ba0ba81"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "232727982553",
            "id": "i-05ce4006b6b67c768",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.my_SG",
            "aws_subnet.private_sub",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:232727982553:internet-gateway/igw-0c2d5ecac0ab9d25d",
            "id": "igw-0c2d5ecac0ab9d25d",
            "owner_id": "232727982553",
            "region": "ap-south-1",
            "vpc_id": "vpc-085a10abb4e4abaa6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:232727982553:route-table/rtb-0580e34ba9aebb3a9",
            "id": "rtb-0580e34ba9aebb3a9",
            "owner_id": "232727982553",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085a10abb4e4abaa6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "232727982553",
            "id": "rtb-0580e34ba9aebb3a9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f968c09ca19f155",
            "region": "ap-south-1",
            "route_table_id": "rtb-0580e34ba9aebb3a9",
            "subnet_id": "subnet-08f97ebfc8c548f95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.RT",
            "aws_subnet.private_sub",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095d17f7d1a8bcb39",
            "region": "ap-south-1",
            "route_table_id": "rtb-0580e34ba9aebb3a9",
            "subnet_id": "subnet-01370b042dc0b2687"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.RT",
            "aws_subnet.public_sub",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:232727982553:security-group/sg-07647b47b8ba0ba81",
            "description": "SG created using TF",
            "egress": [],
            "id": "sg-07647b47b8ba0ba81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TF_SG",
            "name_prefix": "",
            "owner_id": "232727982553",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My_SG_TF"
            },
            "tags_all": {
              "Name": "My_SG_TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-085a10abb4e4abaa6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "232727982553",
            "id": "sg-07647b47b8ba0ba81",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:232727982553:subnet/subnet-08f97ebfc8c548f95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f97ebfc8c548f95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "232727982553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "vpc_id": "vpc-085a10abb4e4abaa6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "232727982553",
            "id": "subnet-08f97ebfc8c548f95",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:232727982553:subnet/subnet-01370b042dc0b2687",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01370b042dc0b2687",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "232727982553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "vpc_id": "vpc-085a10abb4e4abaa6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "232727982553",
            "id": "subnet-01370b042dc0b2687",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:232727982553:vpc/vpc-085a10abb4e4abaa6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f077cfe6ea88bfc8",
            "default_route_table_id": "rtb-02ffcf46e58928f82",
            "default_security_group_id": "sg-0cb3b96f4d065d884",
            "dhcp_options_id": "dopt-050d05973341f9233",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085a10abb4e4abaa6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ffcf46e58928f82",
            "owner_id": "232727982553",
            "region": "ap-south-1",
            "tags": {
              "Name": "My_VPC_Tf"
            },
            "tags_all": {
              "Name": "My_VPC_Tf"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "232727982553",
            "id": "vpc-085a10abb4e4abaa6",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}